--- a/build.gradle
+++ b/build.gradle
@@ -16,13 +16,7 @@ apply plugin : 'eclipse'
 apply plugin : 'org.springframework.boot'
 apply plugin : 'io.spring.dependency-management'   //스프링 부트의 의존성들을 관리해줌
 
-/*
-plugins {
-    id 'java'
-}
-*/
-
-group 'org.example'
+group 'com.study.book'
 version '1.0-SNAPSHOT'
 sourceCompatibility = 1.8
 
@@ -30,12 +24,17 @@ repositories {
     mavenCentral()
 }
 
-/*
+
 dependencies {
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
+    compile('org.springframework.boot:spring-boot-starter-web')
+    testCompile('org.springframework.boot:spring-boot-starter-test')
 }
-test {
-    useJUnitPlatform()
+
+bootJar {
+    mainClassName = 'com.study.book.Application'
 }
- */
+bootJar.enabled = false
+
+//test {
+//    useJUnitPlatform()
+//}
